--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^16.3.1",
     "express": "4.17.1",
     "joi": "^17.9.1",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1"
-    
   },
   "devDependencies": {
     "eslint": "7.19.0",
@@ -24,7 +25,7 @@
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "5.2.0",
-    "nodemon": "2.0.15",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "nodemon": "2.0.15"
   }
 }
