--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ PORT= port
 MONGO_URL= url
 SECRET_KEY= something
 EXPIRATION_TIME= period
+SENDGRID_API_KEY= your_api_key
+SENDGRID_EMAIL= your_email
